# ZDEM_Area_Conservation

./: .gitignore  Area_Conservation.py  Area_Conservation_Test.py  CHANGELOG.md  Conservation_Layer.py  Dockerfile  README.md  README.zh-CN.md  checkLicense.py  fig1_algorithm_flow.py  fig2_algorithm_flow.py  fig2_benchmark_models.py  fig3_benchmark_models.py  fig3_complex_models.py  fig4_complex_models.py  fig5_benchmark_mesh.py  fig6_benchmark_filtering.py  fig6_complex_mesh.py  fig7_complex_filtering.py  fig8_areatrend.py  generate_and_stitch.py  issue.py  main.py  main.spec  plot_surface_points.py  pyproject.toml  requirements.txt  setup.py  stitch_figures.py  stitch_pil.py  surface_particles.txt  zdem.lic  zdemio.py  zdemplot.py
__pycache__/: vbox2jpg
copyright/: Dockerfile
copyright/软件著作权申请资料/: 截图方式确认.json  环境检查.json  环境检查.md
copyright/软件著作权申请资料/analysis/: project.json
copyright/软件著作权申请资料/正式资料/: ZDEM 颗粒分布与面积守恒分析系统-代码(全部).docx  ZDEM 颗粒分布与面积守恒分析系统_操作手册.docx  生成报告.md  申请表信息.txt
copyright/软件著作权申请资料/草稿/: 业务理解.json  业务理解.md  业务理解模型稿.json  业务理解模型稿模板.json  业务理解证据.json  业务理解证据.md  代码-全部.md  代码提取清单.json  代码提取清单.md  代码文件候选清单.md  代码文件选择.json  操作手册.md  操作手册自检记录.md  最终生成确认.json  申请表信息.md  申请表字段确认.json
docs/: index.md
samples/: README.md
tests/: test_samples_dat.py  test_smoke.py  test_zdemio.py
zdem_area_conservation/: __init__.py
