[project]
name = "zdem-area-conservation"
version = "0.1.0"
description = "ZDEM 颗粒分布与面积守恒分析工具包"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Phoenix0531-sudo" }]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zdem_area_conservation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
